<resources>
    // activity_main
    <string name="app_name">Koroad_Quiz</string>
    <!--    <string name="welcome">Welcome</string>-->
    <!--    <string name="start_message">Start when you are ready</string>-->
    <string name="start_normal">1·2종 보통</string>
    <string name="start_special">1종대형·특수</string>

    // activity_quiz
    <string name="action_settings">Settings</string>
    <string name="explanation_button">해설</string>
    <string name="next_button">다음</string>
    <string name="question_text">문제</string>
    <string name="example1_text">보기1</string>
    <string name="example2_text">보기2</string>
    <string name="example3_text">보기3</string>
    <string name="example4_text">보기4</string>
    <string name="example5_text">보기5</string>
    <string name="explanation_text">해설</string>
    <string name="progress_zero">0 / 10</string>
    <string name="progress_text">%1$d / %2$d</string>
    <string name="image_contentDescription">NoImage</string>

    // ResultActivity
    <string name="answer_true">정답!</string>
    <string name="answer_false">오답!</string>
    <string name="score">Result: 20 %</string>
    <string name="show_score_pass">%1$d 점입니다.\n 합격하였습니다.</string>
    <string name="show_score_fail">%1$d 점입니다.\n 불합격하였습니다.</string>
    <string name="restart_button_text">다시 풀기</string>
    <string name="title_activity_quizz">quizz</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>