<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">
<!-- Toolbar 레이아웃 적용 -->
    <include
        layout="@layout/custom_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/question_text"
                android:textColor="#363A43"
                android:textSize="@dimen/question_size" />

            <ImageView
                android:id="@+id/tv_image"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/image_contentDescription"/>

            <VideoView
                android:id="@+id/tv_video"
                android:layout_width="wrap_content"
                android:layout_height="0dp"/>

            <LinearLayout
                android:id="@+id/ll_progress_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:indeterminate="false"
                    android:max="10"
                    android:minHeight="50dp"
                    android:progress="0">
                </ProgressBar>

                <TextView
                    android:id="@+id/tv_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColorHint="#7A8089"
                    android:textSize="14sp"
                    tools:text="0/10">
                </TextView>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_option_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/example_text_size"
                android:paddingTop = "@dimen/example_text_padding"
                android:paddingBottom = "@dimen/example_text_padding"
                tools:text="@string/example1_text">
            </TextView>

            <TextView
                android:id="@+id/tv_option_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/example_text_size"
                android:paddingTop = "@dimen/example_text_padding"
                android:paddingBottom = "@dimen/example_text_padding"
                tools:text="@string/example2_text">
            </TextView>

            <TextView
                android:id="@+id/tv_option_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/example_text_size"
                android:paddingTop = "@dimen/example_text_padding"
                android:paddingBottom = "@dimen/example_text_padding"
                tools:text="@string/example3_text">
            </TextView>

            <TextView
                android:id="@+id/tv_option_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/example_text_size"
                android:paddingTop = "@dimen/example_text_padding"
                android:paddingBottom = "@dimen/example_text_padding"
                tools:text="@string/example4_text">
            </TextView>

            <TextView
                android:id="@+id/tv_option_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/example_text_size"
                android:paddingTop = "@dimen/example_text_padding"
                android:paddingBottom = "@dimen/example_text_padding"
                tools:text="@string/example5_text"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="3">

                <Button
                    android:id="@+id/explanation_button"
                    android:layout_weight="1"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:text="@string/explanation_button"
                    android:textSize="@dimen/prev_button_text_size"
                    android:background="@drawable/custom_button"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:drawableStart="@drawable/lightbulb"
                    style="?android:attr/borderlessButtonStyle"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/next_button"
                    android:layout_weight="1"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:text="@string/next_button"
                    android:textSize="@dimen/next_button_text_size"
                    android:background="@drawable/custom_button"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:drawableStart="@drawable/navigate_next"
                    style="?android:attr/borderlessButtonStyle"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>